--- a/quotes.html
+++ b/quotes.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>	</title>
-		<p> Good things take time</p> 
+		<p> Good things take time</p> </br>
+		<p> I'm to busy working on my own grass to notice if yours is greener</p> </br> 
+
 
 </head>
 <body>
